fix: add animation for expand the collapse

--- a/src/components/collapse/style.scss
+++ b/src/components/collapse/style.scss
@@ -10,6 +10,10 @@
     #{$rcCollapse} {
         background-color: inherit;
 
+        &-anim-active {
+            transition: height 0.2s ease-out;
+        }
+
         &-item {
             border-top: 0;
 
